assets/css/app.css
@font-face {
    font-family: 'Berlingske Serif';
    src: url('../fonts/berlingske-serif-regular.otf') format('opentype');
    font-weight: normal;
    font-style: normal;
}

@font-face {
    font-family: 'Berlingske Serif Bold';
    src: url('../fonts/berlingske-serif-bold.otf') format('opentype');
    font-weight: normal;
    font-style: normal;
}

@font-face {
    font-family: 'Berlingske Serif Italic';
    src: url('../fonts/berlingske-serif-italic.otf') format('opentype');
    font-weight: normal;
    font-style: normal;
}

@font-face {
    font-family: 'Lovely Day';
    src: url('../fonts/lovely-day.ttf');
}

body {
    font-family: 'Berlingske Serif Italic';
    font-size: 18px;
    color: #3f3f3f;
}

.container {
  background-color: transparent;
  background-position-x: 30%;
  background-position-y: -490px;
  background-repeat: no-repeat;
  background-attachment: scroll;
  background-image: url("../img/flower-top.jpg");
  background-size: 1170px auto;
  background-origin: padding-box;
  background-clip: border-box;
}

a, a:focus, a:active, a:hover {
  text-decoration: none;
}

.jumbotron {
  padding-top: 65px;
  background: transparent;
  text-align: center;
  padding-bottom: 0px;
}

.jumbotron.title {
  padding-top: 0px;
}

.jumbotron.title h1 {
  margin-top: 5px;
  font-size: 45px;
  line-height: 95px;
}

.jumbotron.title h1 .andviana {
  font-size: 22px;
  line-height: 20px;
}

.jumbotron.title h1 .andviana .aviana {
  display: none;
}

@media only screen
and (min-device-width : 375px)
and (max-device-width : 667px)
and (orientation : landscape) {
  .jumbotron.title h1 .andviana .and {
    display: none;
  }
  .jumbotron.title h1 .andviana .aviana {
    display: block;
  }
}

.jumbotron h2 {
  font-size: 37px;
  line-height: 65px;
}

hr {
  margin-top: 80px;
}

p.subtitle {
  font-family: 'Berlingske Serif';
  text-transform: uppercase;
  color: #5b8b7e;
  text-align: center;
  letter-spacing: 2px;
  font-size: 16px;
}

p.subtitle a {
  color: #5b8b7e;
}

p.together {
  padding-top: 200px;
}

h1, h2 {
  font-family: 'Lovely Day';
  line-height: normal;
}

ul {
  list-style: none;
  padding-left: 0px;
}

ul.ceremony {
  margin-top: 20px;
  margin-bottom: 5px;
  font-family: 'Berlingske Serif';
  color: #5b8b7e;
}

ul.secondary {
  margin-bottom: 0px;
}

ul li {
  text-align: center;
}

p {
  text-align: center;
}

h3 {
  text-align: center;
  font-family: 'Berlingske Serif Bold';
  text-transform: uppercase;
  color: #5b8b7e;
  padding-bottom: 15px;
  padding-top: 35px;
  font-size: 19px;
}

h3.forward, h3.rsvp {
  font-family: 'Berlingske Serif';
  letter-spacing: 2px;
  font-size: 20px;
}

h3.forward {
  font-size: 18px;
}

.row.registry {
  padding-bottom: 200px;

  background-color: transparent;
  background-position-x: 25%;
  background-position-y: 90%;
  background-repeat: no-repeat;
  background-attachment: scroll;
  background-image: url("../img/flower-bot.jpg");
  background-size: 1170px auto;
  background-origin: padding-box;
  background-clip: border-box;
}

.row.registry h3 {
  text-align: center;
  line-height: 30px;
  font-size: 20px;
  padding-bottom: 40px;
}

.row.registry p {
  font-size: 17px;
  text-align: left;
  line-height: 29px;
}

.row.registry p.visit {
  text-align: center;
}

